# sfml-snake

./: CMakeLists.txt  README.md
resource/: FiraCode-Regular.license.txt
src/: fpscounter.hpp  game.hpp  gamedrawer.hpp  intervalrunner.hpp  logger.cpp  logger.hpp  main.cpp
